Fixing challenge variables
